fix overflow

--- a/style.sass
+++ b/style.sass
@@ -25,7 +25,7 @@ body
   background: $back
   color: black
   width: 320px
-  height: 500px
+  height: 600px
   padding-top: 1em
 
 section
